# stalwart-mcp

./: README.md  SPEC.md  pyproject.toml
.github/workflows/: build.yml
docs/: index.html
src/stalwart_mcp/: __main__.py  client.py  config.py  server.py  tools.py
