[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stalwart-mcp"
version = "1.0.0"
description = "MCP server for Stalwart mail server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0",
]
keywords = ["mcp", "stalwart", "mail", "email", "model-context-protocol", "claude", "ai"]

[project.scripts]
stalwart-mcp = "stalwart_mcp:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
